Changed name in index.html; setup improved API routes in __init__.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Pi Security Cam</title>
+        <title>Smart Room Cam</title>
     </head>
     <body>
         <h1>Live Feed</h1>
